change env paramters that can be used in docker run